#962 Adding 2px of padding to bottom of help-text blocks to prevent the bottoms of 'g's from being cut off.

--- a/ADSM/static/css/adsm.css
+++ b/ADSM/static/css/adsm.css
@@ -208,6 +208,7 @@ form.editable input{
     display: block;
     height: auto;
     overflow: hidden; /* check boxes are bold from mixins.less and I think it looks better with definitions*/
+    padding-bottom: 2px;
 }
 
 .hide-help-text .help-block {
